# roadtripplanner

./: pyproject.toml
src/: main.py
src/static/css/: style.css
src/static/js/: leaflet_setup.js
src/templates/: items.html
